<resources>
    <string name="app_name">VoyagePlus</string>
    <string name="heading_one">Planning a cool exciting trip with your friends</string>
    <string name="heading_two">We have a list of various family visiting location for you</string>
    <string name="heading_three">Relax your mind from family stress, office burden</string>
    <string name="heading_fourth">A lot of varities of exciting spots for fun, enjoyment and bonding</string>
    <string name="top_moment_db">Top_moments</string>
    <string name="plus_vistes_db">Plus_visites</string>
    <string name="field_likes">likes</string>
    <string name="desc_one">Want a solo trip.Want to enjoy a trip with friends.You are planning an exciting and cool trip with your friends, but you have a confusion on site ? Don\'t worry.</string>
    <string name="desc_two">We offer you a wide variety of places to visit.</string>
    <string name="desc_three">We have a list of various family hangout places for your family to enjoy, have a great vacation for kids, places for parents.</string>
    <string name="desc_fourth">You with lots of varieties of exciting places to hang out, have fun and bond.</string>
 <string name="skip">SKIP</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome  ,</string>
    <string name="login_failed">login failed !</string>
    <string name="invalid_username">invalid username</string>
    <string name="invalid_password">invalid password</string>
    <string name="page_title">"Hey, "</string>
    <string name="wanna_go">Where do you wanna go today ?</string>
    <string name="les_mieux_notes">Best rated</string>
    <string name="dbname_photos">photos</string>
    <string name="des_title">What\'s New</string>
    <string name="des_content"><b>We heard you guys</b>\n\n\n* Updated with new exciting places and resolved bugs.\n\n* We have added more images of places and hotels to excite you and letting you know more about the places visually.\n\n* You can retry the cancelled orders and book the same hotel that you tried to order.\n\n* Settings are added with more usable options (Like clear app cache, notifications, etc).\n\n* The user can download your ordered hotel invoice pdf from the booking summary page.</string>
    <string name="read_more"><u>Read More</u></string>
    <string name="read_less"><u>Read Less</u></string>
    <string name="edit"><u>EDIT</u></string>
    <string name="total"><u>Total Price</u></string>
    <string name="terms_conditions">By checking the checkbox and selecting the Button below, I agree to the Terms And Conditions applied and also agree to pay the total amount shown, which includes, taxes, GST and service charges.</string>
    <string name="add"><u>ADD</u></string>
    <string name="msg_dialog_txt">Dont forget to fill up the required details !!</string>
    <string name="todo">TODO</string>
    <string name="les_plus_visit_s">More visited </string>
    <string name="about_us">About Us</string>
    <string name="your_personal_buddy_to_guide_your_trip">Your personal buddy to guide your trip</string>
    <string name="travel_makes_one_modest_you_see_what_a_tiny_place_you_occupy_in_the_world_n_n_we_at_tourbuddy_swear_by_this_and_put_stock_in_satisfying_travel_dreams_that_make_you_perpetually_rich_constantly_we_have_been_moving_excellent_encounters_for_a_considerable_length_of_time_through_our_cutting_edge_planned_occasion_bundles_and_other_fundamental_travel_administrations_we_rouse_our_clients_to_carry_on_with_a_rich_life_brimming_with_extraordinary_travel_encounters_n_n_through_our_exceptionally_curated_occasion_bundles_we_need_to_take_you_on_an_adventure_where_you_personally_enjoy_with_the_stunning_magnificence_of_india_and_far_off_terrains_we_need_you_to_observe_sensational_scenes_that_are_a_long_ways_past_your_creative_ability">“Travel makes one modest, you see what a tiny place you occupy in the world”.\n\n We, at ‘TourBuddy’, swear by this and put stock in satisfying travel dreams that make you perpetually rich constantly. We have been moving excellent encounters for a considerable length of time through our cutting edge planned occasion bundles and other fundamental travel administrations. We rouse our clients to carry on with a rich life, brimming with extraordinary travel encounters.\n\n Through our exceptionally curated occasion bundles, we need to take you on an adventure where you personally enjoy with the stunning magnificence of India and far off terrains. We need you to observe sensational scenes that are a long ways past your creative ability.</string>
    <string name="we_are_the_pioneers_of_outside_trade_in_india_and_booking_invoice_online_is_basic_and_advantageous_with_us_nour_online_visa_administrations_are_exceptional_and_make_the_bulky_procedure_of_booking_visa_a_cake_stroll_for_clients_we_likewise_give_exceptional_visa_forex_and_travel_protection_and_outside_settlement_administrations_for_understudies_voyaging_abroad_for_study_regardless_of_whether_it_s_reserving_flights_or_inns_for_your_movement_company_name_offers_everything_under_one_umbrella_we_likewise_have_journey_occasions_for_individuals_who_are_searching_for_solace_and_reasonable_extravagance_n_n_we_offer_best_limits_on_our_top_rated_visit_bundles_to_clients_who_pick_our_viable_administrations_over_and_over_how_about_we_remind_you_indeed_that_we_don_t_expect_to_be_your_visit_and_travel_specialists_we_endeavor_to_be_your_vacation_accomplices_until_the_end_of_time">We are the pioneers of outside trade in India and booking Invoice online is basic and advantageous with us.\nOur online visa administrations are exceptional and make the bulky procedure of booking visa a cake stroll for clients. We likewise give exceptional visa, forex and travel protection and outside settlement administrations for understudies voyaging abroad for study. Regardless of whether it’s reserving flights or inns for your movement, Company Name offers everything under one umbrella. We likewise have journey occasions for individuals who are searching for solace and reasonable extravagance.\n\n We offer best limits on our top rated visit bundles to clients who pick our viable administrations over and over. How about we remind you indeed that we don’t expect to be your visit and travel specialists; we endeavor to be your vacation accomplices until the end of time.</string>
    <string name="edit_crendentials">Edit Crendentials</string>
    <string name="create_your_new_password">Create your new password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="update">Update</string>
    <string name="update_your_email_id">Update your Email ID</string>
    <string name="the_current_password">Current password</string>
    <string name="new_email_id">New Email ID</string>
    <string name="confirm_new_email_id">Confirm new Email ID</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_reset_password">Change / Reset Password</string>
    <string name="change_your_account_password_by_click_safely">Change your account password by click safely</string>
    <string name="update_email_account">Update Email Account</string>
    <string name="comments_and_experiences">Comments and Experiences</string>
    <string name="update_your_account_email_address_with_your_desired_new_email_address_easily">Update your account email address with your desired new email address easily</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_your_account_removing_your_all_details_that_you_have_entered_please_confirm_before_deleting_your_account">Delete your account removing your all details that you have entered. Please confirm before deleting your account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="contact_details">Contact Details</string>
    <string name="residential_details">Residential Details</string>
    <string name="search">Search</string>
    <string name="full_address">Full Address</string>
    <string name="your_local_area">Your Local Area</string>
    <string name="your_state_country">Your State, Country</string>
    <string name="app_settings">App Settings</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="receive_your_notification_status_to_get_all_the_updates_and_news">Receive your notification status to get all the updates and news.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="to_enable_dark_mode">To enable dark mode</string>
    <string name="clear_app_cache">Clear App Cache</string>
    <string name="clear_temporary_cache_and_junk_files_to_speed_up_app">Clear Temporary Cache and Junk Files to speed up App!</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="see_what_apos_s_new_in_this_version">See what\'s new in this version.</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="share_the_app_with_your_friends_and_family">Share the app with your friends and family</string>
    <string name="voyage_plus_version">Voyage plus Version</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="no_network_connection_please_try_to_re_connect">No Network Connection. Please try to re-connect</string>
    <string name="get_started">Get Started</string>
    <string name="place_details">Place Details</string>
    <string name="share_your_experience_with_the_people">Share your experience with the people...</string>
    <string name="my_profile">My Profile</string>
    <string name="dob">DOB :</string>
    <string name="address">Address :</string>
    <string name="contact_no">Contact No :</string>
    <string name="email_id">Email ID :</string>
    <string name="ex_town">Ex : Town</string>
    <string name="suggestion">Suggestion</string>
    <string name="show_comments">Show Comments</string>
    <string name="go_to_the_best_places">go to the best places</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="deactivate_your_account">Deactivate your account</string>
    <string name="are_you_sure_you_want_to_delete_your_account_nyou_won_t_be_able_to_retrieve_your_account_afterwards">Are you sure you want to delete your account ? \nYou won\'t be able to retrieve your account afterwards</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_registered_email_id_to_receive_reset_link">Enter your registered email ID to receive Reset Link</string>
    <string name="send">Send</string>
    <string name="top_of_the_moment">Top of the moment</string>
    <string name="most_rated">Most rated</string>
    <string name="my_favorites_places">My favorites places</string>
    <string name="no_favorite_added_yet">No favorite added yet !</string>
    <string name="enter_your_email_id">Enter your Email ID</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="search_here">Search Here</string>
    <string name="information_settings">Information Settings</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_information">Account Information</string>
    <string name="appication_informations">Appication Informations</string>
</resources>