<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp">

    <LinearLayout
        android:id="@+id/delete_accnt_lay_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/delete_accnt_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/deactivate_your_account"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delete_accnt_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/are_you_sure_you_want_to_delete_your_account_nyou_won_t_be_able_to_retrieve_your_account_afterwards" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/delete_accnt_lay_1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/accnt_delete_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/accnt_process_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/delete"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>