<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_settings_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/main_settings_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="TODO"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                tools:ignore="ContentDescription,HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/main_settings_back_btn"
                android:text="@string/app_settings"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/main_settings_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="serif"
                        android:text="@string/general"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="15sp" />

                    <RelativeLayout
                        android:id="@+id/main_settings_noti_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_toStartOf="@+id/main_settings_notification_switch"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/notifications"
                                android:textSize="15sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5sp"
                                android:text="@string/receive_your_notification_status_to_get_all_the_updates_and_news"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/main_settings_notification_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:checked="true" />


                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/main_settings_dark_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dark_mode"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/to_enable_dark_mode"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:layout_marginTop="10dp" />
                    <LinearLayout
                        android:id="@+id/main_settings_appcache_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clear_app_cache"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/clear_temporary_cache_and_junk_files_to_speed_up_app"
                            android:textSize="12sp" />

                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="serif"
                        android:text="@string/miscellaneous"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:id="@+id/main_settings_news_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="What&apos;s New"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/see_what_apos_s_new_in_this_version"
                            android:textSize="12sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/main_settings_invite_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/invite_friends"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/share_the_app_with_your_friends_and_family"
                            android:textSize="12sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp"
                        android:paddingVertical="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/voyage_plus_version"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:text="@string/version_1_0_0"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>
